// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputNumber render correctly 1`] = `
<div
  class="cloud-input-number default "
>
  <div
    class="cloud-input-number-handler-wrap"
  >
    <span
      class="cloud-input-number-handler cloud-input-number-handler-up"
    >
      <i
        class="cloud-input-number-handler-up-icon cloud-icon icon-up"
      />
    </span>
    <span
      class="cloud-input-number-handler cloud-input-number-handler-down"
    >
      <i
        class="cloud-input-number-handler-down-icon cloud-icon icon-down"
      />
    </span>
  </div>
  <div
    class="cloud-input-number-handler-input cloud-input-number-handler-input-top-bottom"
  >
    <input
      class="cloud-input-number-input"
      max="Infinity"
      min="-Infinity"
      placeholder="请输入"
      step="1"
      value=""
    />
  </div>
</div>
`;

exports[`InputNumber should render correctly noStep 1`] = `
<div
  class="cloud-input-number default "
>
  <div
    class="cloud-input-number-handler-input cloud-input-number-handler-input-top-bottom"
  >
    <input
      class="cloud-input-number-input"
      max="Infinity"
      min="-Infinity"
      placeholder="请输入"
      step="1"
      value=""
    />
  </div>
</div>
`;

exports[`InputNumber should render different by size props 1`] = `
<div
  class="cloud-input-number small "
>
  <div
    class="cloud-input-number-handler-wrap"
  >
    <span
      class="cloud-input-number-handler cloud-input-number-handler-up"
    >
      <i
        class="cloud-input-number-handler-up-icon cloud-icon icon-up"
      />
    </span>
    <span
      class="cloud-input-number-handler cloud-input-number-handler-down"
    >
      <i
        class="cloud-input-number-handler-down-icon cloud-icon icon-down"
      />
    </span>
  </div>
  <div
    class="cloud-input-number-handler-input cloud-input-number-handler-input-top-bottom"
  >
    <input
      class="cloud-input-number-input"
      max="Infinity"
      min="-Infinity"
      placeholder="请输入"
      step="1"
      value=""
    />
  </div>
</div>
`;

exports[`InputNumber should render different by size props 2`] = `
<div
  class="cloud-input-number default "
>
  <div
    class="cloud-input-number-handler-wrap"
  >
    <span
      class="cloud-input-number-handler cloud-input-number-handler-up"
    >
      <i
        class="cloud-input-number-handler-up-icon cloud-icon icon-up"
      />
    </span>
    <span
      class="cloud-input-number-handler cloud-input-number-handler-down"
    >
      <i
        class="cloud-input-number-handler-down-icon cloud-icon icon-down"
      />
    </span>
  </div>
  <div
    class="cloud-input-number-handler-input cloud-input-number-handler-input-top-bottom"
  >
    <input
      class="cloud-input-number-input"
      max="Infinity"
      min="-Infinity"
      placeholder="请输入"
      step="1"
      value=""
    />
  </div>
</div>
`;

exports[`InputNumber should render different by size props 3`] = `
<div
  class="cloud-input-number large "
>
  <div
    class="cloud-input-number-handler-wrap"
  >
    <span
      class="cloud-input-number-handler cloud-input-number-handler-up"
    >
      <i
        class="cloud-input-number-handler-up-icon cloud-icon icon-up"
      />
    </span>
    <span
      class="cloud-input-number-handler cloud-input-number-handler-down"
    >
      <i
        class="cloud-input-number-handler-down-icon cloud-icon icon-down"
      />
    </span>
  </div>
  <div
    class="cloud-input-number-handler-input cloud-input-number-handler-input-top-bottom"
  >
    <input
      class="cloud-input-number-input"
      max="Infinity"
      min="-Infinity"
      placeholder="请输入"
      step="1"
      value=""
    />
  </div>
</div>
`;
